# app/Http/Controllers/AssetsActionController.php
@@ -6,6 +6,8 @@ use Illuminate\Http\Request;
 use App\Contracts\Assets\AssetsActionInterface;
 use Illuminate\Http\JsonResponse;
 use App\Http\Requests\Requests\Assets\AssetsRequest;
+use App\Http\Requests\Requests\Assets\UpdateAssetsRequest;
+use Illuminate\Support\Facades\Log;
 class AssetsActionController extends Controller
 {
     protected $assetAction;
@@ -38,7 +40,7 @@ class AssetsActionController extends Controller
     *                 @OA\Property(property="ClassificationID", type="integer", example=1),
     *                 @OA\Property(property="CriticalityID", type="integer", example=1),
     *                 @OA\Property(property="ActionID", type="integer", example=1),
-    *                 @OA\Property(property="CreatedBy", type="integer", example=1),
+    *                 @OA\Property(property="UserID", type="integer", example=1),
      *             ),
      *         ),
      *     ),
@@ -93,6 +95,69 @@ class AssetsActionController extends Controller
      */
     public function destroy($id) : JsonResponse {
         list($status, $message) = $this->assetAction->delete($id);
+        if (!$status) return $this->responseError($message);
+        return $this->responseSuccess($message);
+    }
+
+   /**
+     * @OA\Post(
+     *     path="/digital/api/assets/{id}",
+     *     operationId="UpdateAsset",
+     *     tags={"Assets"},
+     *     summary="Update an existing asset",
+     *     description="Update an existing asset in the system",
+     *     @OA\Parameter (
+     *         description="Id of the asset",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         example=1,
+     *         @OA\Schema (
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(property="Code", type="string", example="A12345"),
+     *                 @OA\Property(property="Name", type="string", example="Asset Name"),
+     *                 @OA\Property(property="TypeID", type="integer", example=1),
+     *                 @OA\Property(property="LocationID", type="integer", example=1),
+     *                 @OA\Property(property="DepartmentID", type="integer", example=1),
+     *                 @OA\Property(property="StatusID", type="integer", example=1),
+     *                 @OA\Property(property="ClassificationID", type="integer", example=1),
+     *                 @OA\Property(property="CriticalityID", type="integer", example=1),
+     *                 @OA\Property(property="ActionID", type="integer", example=1),
+     *                 @OA\Property(property="UserID", type="integer", example=1),
+     *             ),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Resource updated",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response="422",
+     *         description="Unprocessable Entity",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="No data found",
+     *         @OA\JsonContent()
+     *     ),
+     * )
+     */
+    public function update(UpdateAssetsRequest $request, $id): JsonResponse
+    {
+        $validatedData = $request->validated();
+        Log::info('Data received for update:', $validatedData);
+        list($status, $message) = $this->assetAction->update($id, $validatedData);
         if (!$status) return $this->responseError($message);
         return $this->responseSuccess($message);
     }
